wp_contextual/tests/error_empty_result.stderr
error: WpContextual didn't generate anything. Did you forget to add #[WpContext] attribute?
 --> tests/error_empty_result.rs:4:12
  |
4 | pub struct SparseFoo {}
  |            ^^^^^^^^^
