wp_contextual/tests/error_empty_result.rs
use wp_contextual::WPContextual;

#[derive(WPContextual)]
pub struct SparseFoo {}

fn main() {}

uniffi::setup_scaffolding!();
